# dirt-dossier

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
api/: alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: b0910356ecc6_add_spatial_indexes.py  b9c7bd993bed_initial_schema.py  e79d2edab4f2_osm_trail_columns.py
api/scripts/: bootstrap_strava.py  healthcheck.py  import_trails.py  match_all.py  seed_bikes.py  seed_components.py  strava_auth.py  sync_recent.py
api/src/dirt_dossier/: config.py  db.py  matching.py  models.py  strava.py
docs/: osm-import.md  strava-oauth.md
